--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <footer>
         <div class="contact-info">
-            <p>Contáctanos: <a href="mailto:info@example.com">info@example.com</a> | WhatsApp: <a href="https://wa.me/1234567890">1234567890</a></p>
+            <p>Contáctanos: <a href="mailto:info@example.com">TranslatedByMe@example.com</a> | WhatsApp: <a href="https://wa.me/1234567890">99999999</a></p>
         </div>
         <div class="social-icons">
             <a href="#" target="_blank">Facebook</a>
