--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="#" target="_blank">Instagram</a>
             <a href="#" target="_blank">LinkedIn</a>
         </div>
-        <p>© 2024 Todos los derechos reservados.</p>
+        <p>© 2024 ByMe Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
